Add button styles

--- a/app/www/css/index.css
+++ b/app/www/css/index.css
@@ -3,7 +3,12 @@
   height: 100%;
 }
 
-.icon {
+.icon.right {
   margin-right: 5px;
   float: right;
+}
+
+.icon.left {
+  margin-left: 5px;
+  float: left;
 }
