--- a/app/platforms/ios/www/css/index.css
+++ b/app/platforms/ios/www/css/index.css
@@ -1,4 +1,14 @@
 #map {
-  width: 500px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
+}
+
+.icon.right {
+  margin-right: 5px;
+  float: right;
+}
+
+.icon.left {
+  margin-left: 5px;
+  float: left;
 }
